modifies/styles cakes section of page

--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ nav {
 	border-radius: 5%;
 }
 
+.cakes-para {
+	width: 80%;
+}
+
 .para-div {
 	font-family: 'Josefin Sans', sans-serif;
     font-size: 1.6rem;
